# decentralised-content-subscription-near

./: .gitignore  Cargo.toml  README.md  test.sh
blog/: 06-02-2022.md  07-02-2022.md
contracts/: Cargo.toml  build.sh
contracts/res/: decentralised_content_subscription_near.wasm
contracts/src/: data_structures.rs  lib.rs
neardev/: dev-account  dev-account.env
src/: lib.rs
testing/: Cargo.toml
testing/src/: contract_call_tester.rs  decentralised_content_subscription_near.rs  sandbox.rs  utils.rs
